@@ -19,7 +19,10 @@ my $builder = Module::Build->new(
     },
     build_requires => {
         'Test::More' => 0,
-        'Test::Perl::Critic' => 0,
+        'Test::NoWarnings' => 0,
+#        'Test::Perl::Critic' => 0,
+#        'Test::Pod'            => 1.14,
+#        'Test::Pod::Coverage'  => 1.04,
     },
     add_to_cleanup      => [ 'Algorithm-VectorClocks-*' ],
 );
